[package]
name = "osm_boundaries_utils"
version = "0.12.2"
authors = ["dt.ro <dt.ro@canaltp.fr>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
description = "utilities to help reading OpenStreetMap boundaries in rust."
repository = "https://github.com/hove-io/osm_boundaries_utils"
keywords = ["openstreetmap", "osm", "boundaries"]
license = "WTFPL"
readme = "README.md"
edition = "2024"

[dependencies]
geo = "0.33"
tracing = "0.1"
osmpbfreader = "0.19"
